# tgf

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: bloom.wgsl  color_mesh.wgsl  tonemapping.wgsl
examples/: basic.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  asset.rs  bucket_array.rs  buffer.rs  camera3d.rs  color.rs  default_world.rs  graphics_context.rs  input.rs  key_frames.rs  lerp.rs  lib.rs  rect.rs  screen.rs  shader.rs  shader_source.rs  texture.rs  time.rs  transform.rs  uniforms.rs  vertex.rs  watcher.rs  yolo.rs
src/renderer/: alpha_sdf.wgsl  bloom.rs  bloom.wgsl  color_mesh.rs  color_mesh.wgsl  gizmos.rs  gizmos.wgsl  mod.rs  screen_textures.rs  sdf_sprite.rs  sdf_sprite.wgsl  tone_mapping.rs  tonemapping.wgsl  ui.wgsl  ui_3d.rs  ui_3d.wgsl  ui_screen.rs  uniforms.wgsl
src/renderer/egui/: mod.rs  platform.rs
src/renderer/particles/: mod.rs  particle.wgsl  particle_renderer.rs  particle_system.rs
src/ui/: allocator.rs  batching.rs  element.rs  element_context.rs  element_id.rs  element_store.rs  font.rs  layout.rs  mod.rs
src/utils/: camera_controllers.rs  global_values.rs  mod.rs
