[package]
name = "tgf"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Tadeo's Game Framework"


[features]
default = ["eguimod"]
eguimod = ["egui", "egui-wgpu"]

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
egui = { version = "0.27.2", optional = true }
egui-wgpu = { version = "0.27.2", optional = true }
glam = { version = "0.27.0", features = ["serde", "bytemuck", "rand"] }
image = "0.25.1"
log = "0.4.21"
notify = "6.1.1"
reqwest = "0.12.2"
slotmap = { package = "slotmap-map", version = "1.0.7", features = ["serde"] }
smallvec = "1.13.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs"] }
wgpu = { version = "0.19.3", features = ["naga"] }
winit = "0.29.15"

[dev-dependencies]
rand = "0.8.5"
