[package]
name = "tgf"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Tadeo's Game Framework"

[features]
default = ["eguimod", "renderers", "ui"]
eguimod = ["egui", "egui-wgpu"]
renderers = []
ui = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
egui = { version = "0.27.2", optional = true }
egui-wgpu = { version = "0.27.2", optional = true }
etagere = "0.2.10"
fontdue = "0.8.0"
image = "0.24.7"
log = "0.4.21"
notify = "6.1.1"
sdfer = { version = "0.2.1", features = ["image"] }
smallvec = "1.13.2"
wgpu = { version = "0.19.3", features = ["naga"] }
winit = "0.29.15"
tgf-macros = { path = "./macros", version = "0.0.2" }
simple-easing = "1.0.1"
pollster = "0.3.0"
glam = { version = "0.27.0", features = ["serde", "bytemuck", "rand"] }
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
rand = "0.8.5"
